--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Great Britain -- History -- Civil War, 1642-1649 -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: 'The Broken Font: A Story of the Civil War, Vol. 2 (of 2)'
 url: http://www.gutenberg.org/ebooks/43262
